--- a/src/pages/MainPage/Main.module.scss
+++ b/src/pages/MainPage/Main.module.scss
@@ -5,8 +5,6 @@
   position: absolute;
   left: 0;
   top: 0;
-
-  // background-image: url(../../assets/image/pic.jpg);
   background: rgb(54, 51, 51);
   background-repeat: no-repeat;
   background-size: cover;
@@ -26,8 +24,10 @@
     gap: 10px;
       a{
         text-decoration: none;
+        color: black;
       }
   }
+
 }
 
 
